@@ -1,3 +1,13 @@
+2020-02-11  Nick Clifton  <nickc@redhat.com>
+
+	Import from the mainline:
+
+	* elf32-msp430.c (msp430_final_link_relocate): Always use longs
+	for addresses in print statements.
+	(msp430_elf_relax_delete_bytes): Likewise.
+	(msp430_elf_relax_add_words): Likewise.
+	(msp430_elf_relax_section): Likewise.
+
 2020-02-10  Jozef Lawrynowicz  <jozef.l@mittosystems.com>
 
 	Apply from master
